# diploma_thesis-distributed_rendering_of_cgi_using_a_render_cluster

./: .gitignore  Cargo.toml  README.md  pull-blender-image.sh  rustfmt.toml
analysis/: amount_of_results.py  analyze.py  efficiency.py  job_duration.py  job_tail_delay.py  pyproject.toml  reading_rendering_writing.py  results_statistics.py  run_all.py  speedup.py  worker_latency.py  worker_utilization.py
analysis/core/: models.py  parser.py  paths.py  timed_context.py  trace.py
analysis/core/analysis/: amount_of_results.py  render_job_duration.py  render_tail_delay.py  worker_utilization.py
blender-projects/01_simple-animation/: 01-simple-animation_60-easy-frames.toml  01-simple-animation_demo_dynamic.toml  01-simple-animation_demo_naive-coarse.toml  01-simple-animation_demo_naive-fine.toml  01-simple-animation_demo_single-worker_naive-fine.toml  01-simple-animation_measuring_600f-10w_dynamic.toml  01-simple-animation_measuring_600f-10w_naive-coarse.toml  01-simple-animation_measuring_600f-10w_naive-fine.toml  01-simple-animation_measuring_600f-1w.toml  01-simple-animation_measuring_600f-20w_dynamic.toml  01-simple-animation_measuring_600f-20w_naive-coarse.toml  01-simple-animation_measuring_600f-20w_naive-fine.toml  01-simple-animation_measuring_600f-5w_dynamic.toml  01-simple-animation_measuring_600f-5w_naive-coarse.toml  01-simple-animation_measuring_600f-5w_naive-fine.toml  01-simple-animation_simple-four-frames.toml  01-simple-animation_very-simple.toml  01_simple-animation.blend  README.md
blender-projects/02_physics/: 02-physics_all-frames.toml  02-physics_demo_170f-5w_naive-fine.toml
blender-projects/03_physics-2/: 03-physics-2_all-frames.toml  03-physics-2_measuring_480f-10w_dynamic.toml  03-physics-2_measuring_480f-10w_naive-coarse.toml  03-physics-2_measuring_480f-10w_naive-fine.toml  03-physics-2_sample.toml
blender-projects/04_very-simple/: 04_very-simple_demo_10f-1w.toml  04_very-simple_demo_4f-1w.toml  04_very-simple_demo_60f-1w.toml  04_very-simple_measuring_14400f-10w_dynamic.toml  04_very-simple_measuring_14400f-10w_eager-naive-coarse.toml  04_very-simple_measuring_14400f-10w_naive-fine.toml  04_very-simple_measuring_14400f-1w.toml  04_very-simple_measuring_14400f-1w_variant2.toml  04_very-simple_measuring_14400f-1w_variant3.toml  04_very-simple_measuring_14400f-1w_variant4.toml  04_very-simple_measuring_14400f-1w_variant5.toml  04_very-simple_measuring_14400f-20w_dynamic.toml  04_very-simple_measuring_14400f-20w_eager-naive-coarse.toml  04_very-simple_measuring_14400f-20w_naive-fine.toml  04_very-simple_measuring_14400f-40w_dynamic.toml  04_very-simple_measuring_14400f-40w_eager-naive-coarse.toml  04_very-simple_measuring_14400f-40w_naive-fine.toml  04_very-simple_measuring_14400f-5w_dynamic.toml  04_very-simple_measuring_14400f-5w_eager-naive-coarse.toml  04_very-simple_measuring_14400f-5w_naive-fine.toml  04_very-simple_measuring_14400f-80w_dynamic.toml  04_very-simple_measuring_14400f-80w_eager-naive-coarse.toml  04_very-simple_measuring_14400f-80w_naive-fine.toml  04_very-simple_measuring_600f-1w.toml
flatbuf/: Cargo.toml  build.rs
flatbuf/definitions/: testschema.fbs
flatbuf/src/: lib.rs
master/: Cargo.toml
master/data/: test-job.toml
master/src/: cli.rs  jobs.rs  main.rs  manager.rs  state.rs
master/src/cluster/: mod.rs  state.rs  strategies.rs
master/src/connection/: event_dispatcher.rs  mod.rs  queue.rs  receiver.rs  requester.rs  sender.rs  worker_logger.rs
master/src/websockets/: mod.rs  worker.rs
master/src/websockets/worker/: event_dispatcher.rs  mod.rs  queue.rs
master/src/worker/: event_dispatcher.rs  mod.rs  queue.rs
nsc/: queue-job.sh  queue_01-simple_600f-10w_dynamic.sh  queue_01-simple_600f-5w_dynamic.sh
scripts/: render-timing-script.py
scripts/arnes/: README.md  queue-batch_04vs_14400f-10w_dynamic.sh  queue-batch_04vs_14400f-1w.sh  (+42 more)
serialization/: Cargo.toml  build.rs
shared/: Cargo.toml
shared/src/: cancellation.rs  errors.rs  lib.rs  logger.rs  logging.rs  websockets.rs  worker_logger.rs
shared/src/jobs/: mod.rs
shared/src/messages/: handshake.rs  heartbeat.rs  job.rs  mod.rs  queue.rs  traits.rs  utilities.rs
shared/src/results/: master_trace.rs  mod.rs  performance.rs  worker_trace.rs
worker/: Cargo.toml
worker/src/: cli.rs  jobs.rs  main.rs  utilities.rs  worker.rs
worker/src/connection/: event_dispatcher.rs  mod.rs  receiver.rs  sender.rs
worker/src/rendering/: mod.rs  queue.rs  runner.rs
worker/src/rendering/runner/: mod.rs  utilities.rs
worker/src/worker/: event_dispatcher.rs  mod.rs
(+86 files in other folders)
