[tool.poetry]
name = "diploma-trace-analysis"
version = "1.0.0"
description = ""
authors = ["Simon Goričar <simon.peter.goricar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.1"
pympler = "^1.0.1"
pywin32 = "^306"
dill = "^0.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
