[package]
name = "master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
miette = { version = "5.7.0", features = ["fancy"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
thiserror = "1.0.40"
url = "2.3.1"
futures-channel = "0.3.28"
futures-util = "0.3.28"
rand = "0.8.5"
scopeguard = "1.1.0"
chrono = "0.4.26"
atomic = "0.5.3"
