[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
tokio-tungstenite = "0.19.0"
tokio = { version = "1.27.0", features = ["full"] }
log = "0.4.18"
serde_json = "1.0.96"
miette = { version = "5.7.0" }
futures-channel = "0.3.28"
futures-util = "0.3.28"
thiserror = "1.0.40"
toml = "0.7.3"
rand = "0.8.5"
