[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
clap = { version = "4.2.4", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-tungstenite = "0.19.0"
miette = { version = "5.7.0", features = ["fancy"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
url = "2.3.1"
futures-channel = "0.3.28"
futures-util = "0.3.28"
shlex = "1.1.0"
chrono = "0.4.26"
regex = "1.8.4"
atomic = "0.5.3"
